--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title layout:title-pattern="$CONTENT_TITLE - MO Stock Keeper">MO Stock Keeper</title>
-    
+    <link rel="icon" type="image/svg+xml" th:href="@{/favicon.svg}">
+    <link rel="shortcut icon" th:href="@{/favicon.svg}">
+
     <!-- Google Fonts: Outfit (Premium, Modern) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,28 +20,34 @@
     <link th:href="@{/css/bootstrap-icons.min.css}" rel="stylesheet">
     <!-- Custom CSS -->
     <link th:href="@{/css/styles.css}" rel="stylesheet">
-    
+
     <!-- Bootstrap JS Bundle -->
     <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
-    <script th:src="@{/js/jquery.min.js}"></script> 
+    <script th:src="@{/js/jquery.min.js}"></script>
     <!-- Html5-QRCode (Local) -->
     <script th:src="@{/js/html5-qrcode.min.js}"></script>
-    
+
     <!-- Select2 (Local) -->
     <link th:href="@{/css/select2.min.css}" rel="stylesheet" />
     <link th:href="@{/css/select2-bootstrap-5-theme.min.css}" rel="stylesheet" />
     <script th:src="@{/js/select2.min.js}"></script>
     <style>
-        .select2-container .select2-selection--single { height: 38px; }
-        .select2-container--bootstrap-5 .select2-selection { border-color: #dee2e6; }
+        .select2-container .select2-selection--single {
+            height: 38px;
+        }
+
+        .select2-container--bootstrap-5 .select2-selection {
+            border-color: #dee2e6;
+        }
     </style>
 
     <!-- Custom JS -->
     <script th:src="@{/js/scripts.js}"></script>
 
-    <meta name="_csrf" th:content="${_csrf.token}"/>
-    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+    <meta name="_csrf" th:content="${_csrf.token}" />
+    <meta name="_csrf_header" th:content="${_csrf.headerName}" />
 </head>
+
 <body class="pb-5 mb-5"> <!-- Padding for bottom nav -->
 
     <!-- Top Navbar (Desktop/Admin mainly) -->
@@ -62,12 +71,12 @@
                     <li class="nav-item"><a class="nav-link" href="#" th:href="@{/admin/settings}">Settings</a></li>
                 </ul>
                 <div class="d-flex">
-                   <span class="text-white me-3" th:if="${#authentication.principal != 'anonymousUser'}">
-                       <i class="bi bi-person-circle"></i> <span th:text="${#authentication.name}">User</span>
-                   </span>
-                   <form th:action="@{/logout}" method="post" th:if="${#authentication.principal != 'anonymousUser'}">
-                       <button class="btn btn-sm btn-outline-light" type="submit">Logout</button>
-                   </form>
+                    <span class="text-white me-3" th:if="${#authentication.principal != 'anonymousUser'}">
+                        <i class="bi bi-person-circle"></i> <span th:text="${#authentication.name}">User</span>
+                    </span>
+                    <form th:action="@{/logout}" method="post" th:if="${#authentication.principal != 'anonymousUser'}">
+                        <button class="btn btn-sm btn-outline-light" type="submit">Logout</button>
+                    </form>
                 </div>
             </div>
         </div>
@@ -104,9 +113,9 @@
     </div>
 
     <!-- Scripts moved to head -->
-    
+
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             $('select.searchable').select2({
                 theme: 'bootstrap-5',
                 width: '100%',
@@ -115,7 +124,8 @@
             });
         });
     </script>
-    
+
     <th:block layout:fragment="scripts"></th:block>
 </body>
+
 </html>
