--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -66,6 +66,7 @@
                     <li class="nav-item"><a class="nav-link" href="#" th:href="@{/batches}">Batches</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" th:href="@{/sales}">Sales</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" th:href="@{/invoices}">Invoices</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#" th:href="@{/customers}">Customers</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" th:href="@{/returns}">Returns</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" th:href="@{/collections}">Collections</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" th:href="@{/admin/settings}">Settings</a></li>
